chore: repoducible environment

--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,10 @@
 name: isic2020
 channels:
+  - khamutov
   - defaults
 dependencies:
   - python=3.7
+  - pip
   - pytorch
   - numpy
   - six
@@ -13,3 +15,9 @@ dependencies:
   - tqdm
   - pillow
   - colorama
+  - click
+  - opencv-python-headless
+  - torchtoolbox
+  - efficientnet-pytorch
+  - pip:
+    - click-config-file==0.6.0
