--- a/env.yml
+++ b/env.yml
@@ -2,6 +2,8 @@ name: isic2020
 channels:
   - khamutov
   - defaults
+  - pytorch
+  - conda-forge
 dependencies:
   - python=3.7
   - pip
@@ -19,6 +21,8 @@ dependencies:
   - opencv-python-headless
   - torchtoolbox
   - efficientnet-pytorch
+  - imgaug
+  - albumentations
   - pip:
     - click-config-file==0.6.0
     - mlflow
