fix: add missing deps

--- a/env.yml
+++ b/env.yml
@@ -8,6 +8,7 @@ dependencies:
   - python=3.7
   - pip
   - pytorch
+  - torchvision
   - numpy
   - six
   - jupyter
@@ -24,4 +25,5 @@ dependencies:
   - imgaug
   - albumentations
   - pip:
+    - click-config-file==0.6.0
     - mlflow
