--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,8 @@
 name: isic2020
 channels:
   - khamutov
-  - defaults
   - pytorch
+  - defaults
   - conda-forge
 dependencies:
   - python=3.7
@@ -27,3 +27,4 @@ dependencies:
   - pip:
     - click-config-file==0.6.0
     - mlflow
+    - pytorch-lightning
