fix: tpu cores must be None if no TPU

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,3 @@
 [settings]
+profile=black
 known_third_party = albumentations,click,colorama,configobj,cv2,efficientnet_pytorch,mlflow,numpy,pandas,pytorch_lightning,sklearn,torch,tqdm
