feat: add Noisy Student EffNet

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 profile=black
-known_third_party = albumentations,click,colorama,configobj,cv2,efficientnet_pytorch,mlflow,numpy,optuna,pandas,psutil,pytorch_lightning,sklearn,torch,tqdm
+known_third_party = albumentations,click,colorama,configobj,cv2,efficientnet_pytorch,mlflow,numpy,optuna,pandas,psutil,pytorch_lightning,sklearn,timm,torch,tqdm
